<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/app_bar_main">

    <ScrollView
        android:layout_width="395dp"
        android:layout_height="670dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/cardView1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                app:cardBackgroundColor="?android:attr/colorButtonNormal"
                app:cardCornerRadius="15sp"
                app:cardElevation="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/pts1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pts1"
                    android:translationX="330dp"
                    android:translationY="40dp" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="361dp"
                    android:layout_height="132dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/quest_1"
                    android:textColor="@android:color/black"
                    android:textSize="30sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="180dp"
                    android:layout_height="55dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="8dp"
                    android:onClick="sendStats"
                    android:text="@string/activity_stats"
                    android:translationX="180dp"
                    android:translationY="80dp" />

                <Button
                    android:id="@+id/button3"
                    style="@style/Widget.AppCompat.Button.Small"
                    android:layout_width="180dp"
                    android:layout_height="55dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:onClick="sendTasks"
                    android:text="@string/activity_tasks"
                    android:translationX="10dp"
                    android:translationY="80dp"
                    app:layout_constraintBottom_toBottomOf="@+id/cardView1"
                    app:layout_constraintEnd_toEndOf="@+id/cardView1" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="358dp"
                    android:layout_height="70dp"
                    android:max="100"
                    android:progress="25"
                    android:progressTint="@color/colorPrimary"
                    android:translationX="10dp"
                    android:translationY="40dp" />

                <View
                    android:id="@+id/divider3"
                    android:layout_width="65dp"
                    android:layout_height="1dp"
                    android:background="@color/colorPrimaryDark"
                    android:translationX="310dp"
                    android:translationY="38dp" />

                <TextView
                    android:id="@+id/lvl1"
                    android:layout_width="65dp"
                    android:layout_height="wrap_content"
                    android:text="@string/lvl1"
                    android:textSize="20sp"
                    android:translationX="320dp"
                    android:translationY="10dp" />

            </android.support.v7.widget.CardView>

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>